--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task Manager</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-$END$
+<header>
+    <h1>Task Manager</h1>
+</header>
+<main>
+    <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="Search tasks...">
+    </div>
+
+    <table id="taskTable">
+        <thead>
+        <tr>
+            <th>Task</th>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Color Code</th>
+        </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+
+</main>
+
+
+<script src="app.js"></script>
 </body>
 </html>
